syntax = "proto3";
package qml_server_grpc_api;

// Switch row when to compile proto-file
//import "common_grpc_api.proto";
import "../common_grpc_api/common_grpc_api.proto";

//~/Programs/protoc-3.10.1-linux-x86_64/bin/protoc  -I qml_server_grpc_api --go_out=plugins=grpc:qml_server_grpc_api qml_server_grpc_api/qml_grpc_server.proto

// Parameter used for Empty inputs
message EmptyParameter {
}

// Ack/Nack- Response message with comment
message AckNackResponse {
    bool acknack = 1; // True=Ack, False=Nack
    string comments = 2; //Comments if needed
}

// The Client register service definition.
// ***********************
service QmlGrpcServices {

    // Main coordinator sends task to worker with this service
    rpc TestInstructionBackendServerIPandPort (BackendServerInformation) returns (common_grpc_api.AckNackResponse) {
    }

    // OnlyForTestSwitchOfBacken(
    rpc OnlyForTestSwitchOfBacken (SwitchOfBackendRequest) returns (common_grpc_api.AckNackResponse) {
    }




}


message BackendServerInformation {
    string backend_server_ip = 1;
    string backend_server_port = 2;
    string backend_server_uuid = 3;
}

message SwitchOfBackendRequest {
    string backendStatus = 1;
}

